Update gradle file